[package]
name = "logscanner"
version = "0.1.0"
authors = ["Chris Konstad <chriskon149@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
console = "0.14.1"
hdrhistogram = "7.3.0"
regex = "1.5"
rayon = "1.5.1"
structopt = "0.3"
